# admc-old

./: CMakeLists.txt  common.h  connector.cpp  connector.h  ldapconnection.cpp  ldapconnection.h  ldapobject.cpp  ldapobject.h  ldapobjectmodel.cpp  ldapobjectmodel.h  ldaptablemodel.cpp  ldaptablemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  objectdata.cpp  objectdata.h  resources.qrc
ui/: connectionproperties.ui  mainwindow.ui  userproperties.ui
